<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="172dp"
        android:layout_height="160dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/imagen_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/crearCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/texto_crear_cuenta"
        android:textColor="#607D8B"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImage" />

    <EditText
        android:id="@+id/nombreRegistro"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/texto_nombre"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:textColorHint="#999"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crearCuenta" />

    <EditText
        android:id="@+id/apellidoRegistro"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/texto_apellido"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:textColorHint="#999"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreRegistro" />

    <EditText
        android:id="@+id/correoRegistro"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/texto_correo"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColorHint="#999"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apellidoRegistro" />

    <EditText
        android:id="@+id/contrasenaRegistro"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/texto_contrasena"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColorHint="#999"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correoRegistro" />

    <EditText
        android:id="@+id/confirmarContrasenaRegistro"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/texto_confirmar_contrasena"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColorHint="#999"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contrasenaRegistro" />

    <Button
        android:id="@+id/crearCuentaButton"
        android:layout_width="248dp"
        android:layout_height="52dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background"
        android:backgroundTint="#607D8B"
        android:text="@string/texto_crear_tu_cuenta"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmarContrasenaRegistro" />

    <TextView
        android:id="@+id/yaTienesCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/ya_tienes_cuenta_inicia_sesion"
        android:textColor="#607D8B"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crearCuentaButton"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>