<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="172dp"
        android:layout_height="160dp"
        android:src="@drawable/imagen_app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.115" />

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/texto_usuario_o_correo"
        android:padding="16dp"
        android:textColorHint="#999"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImage" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/hint_contrena"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColorHint="#999"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameInput" />


    <Button
        android:id="@+id/loginButton"
        android:layout_width="248dp"
        android:layout_height="52dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_background"
        android:backgroundTint="#607D8B"
        android:text="@string/texto_iniciar_sesion"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordInput" />

    <Button
        android:id="@+id/loginButtonGoogle"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background"
        android:backgroundTint="#607D8B"
        android:text="@string/texto_nicia_sesion_con_google"
        android:textAlignment="textEnd"
        android:textColor="#FFFFFF"
        app:icon="@drawable/google_logo"
        app:iconSize="30dp"
        app:iconTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_olvidaste_contraseña"
        android:textColor="#607D8B"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/loginButtonGoogle"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_crear_cuenta"
        android:textColor="#607D8B"
        android:textStyle="bold"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/forgotPassword"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
