<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btn_comenzar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <ImageView
        android:id="@+id/iv_logo_splash"
        android:layout_width="232dp"
        android:layout_height="226dp"
        android:layout_marginTop="88dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/imagen_app"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/app_name"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo_splash"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="329dp"
        android:layout_height="62dp"
        android:layout_marginTop="32dp"
        android:text="@string/mensaje_inicio"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_logo" />

    <Button
        android:id="@+id/btn_inicio"
        android:layout_width="172dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/btn"
        android:text="@string/comenzar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:strokeColor="@color/black"
        app:strokeWidth="2sp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_registrarse"
        android:layout_width="172dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/btn"
        android:text="@string/texto_registrarse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:strokeColor="@color/black"
        app:strokeWidth="2sp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/registrarse"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_inicio" />


</androidx.constraintlayout.widget.ConstraintLayout>